# vpbar

./: .gitignore  1.mkv  1_with_progress.mkv  6月27日.srt  BENCHMARKS.md  Changelog.md  GUIDE.md  README.en.md  README.md  add_progress_bar.py  app.py  config.json  convert_video_to_gif.py  gui.bat  output_gif1.mkv  output_gif2.mkv  output_gif3.mkv  output_webp1.mkv  output_webp2.mkv  output_webp3.mkv  pyproject.toml  requirements.txt  styles.json  test_generate_command.py  vibe_coding_赚钱的秘密都在这里了_vibe_coding_赚钱的秘密都在这里了_我把我.srt  竖屏测试.srt
.superpowers/sdd/: progress.md  review-28d381b..9c2c903.diff  review-3281ff3..3b4327d-whole.diff  review-3281ff3..3b4327d.diff  review-514e69b..28d381b.diff  review-6079f63..514e69b.diff  review-6079f63..bfa11da-whole.diff  review-9c2c903..bfa11da.diff  task-1-brief.md  task-1-diff.txt  task-1-report.md  task-10-brief.md  task-10-report.md  task-11-brief.md  task-11-report.md  task-2-brief.md  task-2-diff.txt  task-2-report.md  task-3-brief.md  task-3-diff.txt  task-3-report.md  task-4-brief.md  task-4-diff.txt  task-4-report.md  task-5-brief.md  task-5-diff.txt  task-5-report.md  task-6-brief.md  task-6-report.md  task-7-brief.md  task-7-report.md  task-8-brief.md  task-8-report.md  task-9-brief.md  task-9-report.md
tests/: conftest.py  memtest.py  test_cli.py  test_integration.py  test_pure.py
tests/fixtures/: test.srt
vpbar/: __init__.py  __main__.py  app.py  chapters.py  cli.py  config.py  ffmpeg.py  fonts.py  gif.py  gui_utils.py  image.py  llm.py  progress.py  scrubber.py  srt.py  transcribe.py  video.py
(+8 files in other folders)
