[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "vpbar"
version = "0.5.0"
requires-python = ">=3.8"
dependencies = [
    "Pillow>=10.0.0",
    "openai>=1.0.0",
    "faster-whisper>=1.0.0",
    "funasr>=1.0.0",
    "funasr-onnx>=0.4.0",
    "modelscope>=1.9.0",
    "streamlit>=1.37.0",
    "torch>=2.0.0",
]

[project.scripts]
vpbar = "vpbar.cli:main"

[tool.setuptools.packages.find]
include = ["vpbar*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
filterwarnings = ["ignore::DeprecationWarning"]

[project.optional-dependencies]
test = ["pytest>=7.0", "pytest-mock>=3.0"]
